fixed overflow nav link

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -24,7 +24,8 @@
   background-color: #faf9f9;
   min-height: 85vh;
   box-shadow: 0 1.5rem 5rem rgba(0, 0, 0, 0.3);
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
   @media only screen and (max-width: 1000px) {
     .App {
       margin: 0; } }
@@ -49,6 +50,9 @@
         margin: 0 5px;
         transform: rotate(15deg);
         transition: all 0.3s; }
+        @media only screen and (max-width: 500px) {
+          .Header .navigation__header .glass-icon--1 {
+            transform: rotate(0); } }
       .Header .navigation__header .glass-icon--2 {
         font-size: 2rem;
         transform: rotate(-15deg);
@@ -175,7 +179,7 @@
         background-clip: text;
         margin-right: 7px; }
         .Landing .header-box__primary .glass-icon--1 {
-          font-size: 2rem;
+          font-size: 1.8rem;
           margin-right: 8px;
           transform: rotate(15deg);
           color: inherit;
@@ -250,7 +254,7 @@
     text-align: center;
     font-size: 2.7rem;
     font-weight: 300;
-    color: #4e4e4e;
+    color: #bc4e9c;
     font-family: 'Rum Raisin', sans-serif; }
     @media only screen and (max-width: 700px) {
       .Event__heading {
@@ -270,7 +274,8 @@
     width: 150px; }
     .SideNav .side-nav .links-container {
       display: flex;
-      flex-direction: column; }
+      flex-direction: column;
+      padding: 0; }
       .SideNav .side-nav .links-container__item {
         display: inline-block;
         font-size: 18px;
