--- a/client/src/sass/components/_app.scss
+++ b/client/src/sass/components/_app.scss
@@ -5,6 +5,7 @@
   min-height: 85vh;
   box-shadow: 0 1.5rem 5rem rgba(0, 0, 0, 0.3);
   position: relative;
+  overflow: hidden;
 
   @media only screen and (max-width: 1000px) {
     margin: 0;
