--- a/client/src/sass/components/_event.scss
+++ b/client/src/sass/components/_event.scss
@@ -6,7 +6,7 @@
     text-align: center;
     font-size: 2.7rem;
     font-weight: 300;
-    color: $color-grey-dark;
+    color: $color-primary-dark;
     font-family: 'Rum Raisin', sans-serif;
 
     @media only screen and (max-width: 700px) {
