--- a/client/src/sass/components/_header.scss
+++ b/client/src/sass/components/_header.scss
@@ -23,6 +23,10 @@
           margin: 0 5px;
           transform: rotate(15deg);
           transition: all 0.3s;
+
+          @media only screen and (max-width: 500px) {
+            transform: rotate(0);
+          }
         }
 
         &--2 {
