--- a/client/src/sass/components/_landing.scss
+++ b/client/src/sass/components/_landing.scss
@@ -61,7 +61,7 @@
         margin-right: 7px;
 
         &--1 {
-          font-size: 2rem;
+          font-size: 1.8rem;
           margin-right: 8px;
           transform: rotate(15deg);
           color: inherit;
