--- a/client/src/sass/components/_sidenav.scss
+++ b/client/src/sass/components/_sidenav.scss
@@ -9,6 +9,7 @@
     .links-container {
       display: flex;
       flex-direction: column;
+      padding: 0;
 
       &__item {
         display: inline-block;
